syntax = "proto3";
package bitcoin;
option go_package = "/bitcoin";

message UnspentOutput {
  string TxHash = 1 [json_name = "tx_hash"];
  uint32 Vout = 2 [json_name = "vout"];
  string Address = 3 [json_name = "address"];
  string Account = 4 [json_name = "account"];
  string ScriptPubKey = 5 [json_name = "script_pub_key"];
  string RedeemScript = 6 [json_name = "redeem_script"];
  double Amount = 7 [json_name = "amount"];
  int64 Confirmations = 8 [json_name = "confirmations"];
  bool Spendable = 9 [json_name = "spendable"];
}

message GetNewAddressInput {
}

message GetNewAddressOutput {
  string Address = 1 [json_name = "address"];
}

message ListUnspentInput {
  uint64 MinConf = 1 [json_name = "minconf"];
  uint64 MaxConf = 2 [json_name = "maxconf"];
  string Address = 3 [json_name = "addresses"];
}

message ListUnspentOutput {
  repeated UnspentOutput UnspentOutputs = 1 [json_name = "unspent_outputs"];
}

message SendToAddressInput {
  string ToAddress = 1 [json_name = "to_address"];
  double Amount = 2 [json_name = "amount"];
}

message SendToAddressOutput {
  string TxHash = 1 [json_name = "tx_hash"];
}